# AI-Contract-Review

./: .env.example  .gitignore  PLAYBOOK_REVIEW_EXPLAINED.md  PROMPTS.md  README.md  nda-rules.json  pyproject.toml
.planning/: ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
docs/: RISK_AND_COMPLIANCE_AGENT.md
rules/: Epit_rules.json  NDA_rules.json
src/: dependencies.py
src/agents/: compare.py  describe_draft.py  doc_information.py  general_review.py  playbook_review.py
src/api/: context.py  main.py  session_utils.py
src/config/: context.py  logging.py  settings.py
src/data/: default_playbook_rules.json  playbook_rules_v3.json
src/exceptions/: base_exception.py  embedding_exceptions.py  faiss_exceptions.py  ingestion_exceptions.py  llm_exceptions.py  parser_exceptions.py  registry_exceptions.py
src/orchestrator/: main.py  orchestrator_agent.py
src/schemas/: agents.py  clause_extraction.py  compare.py  comparision.py  contract_analyzer.py  contract_structure.py  describe_and_draft.py  describe_draft.py  doc_chat.py  draft.py  errors.py  general_review.py  llm_response.py  missing_clauses.py  playbook.py  playbook_review.py  playbook_review_srikar.py  query_rewriter.py  registry.py  rule_check.py  tool_schema.py
src/scripts/: validation_script.py
src/services/: clause_extractor.py  playbook_loader.py  session_manager.py
src/tools/: comparision.py  describe_and_draft.py  doc_chat.py  document_comparison.py  drafter.py  general_review.py  general_reviewer.py  key_details.py  key_information.py  missing_clauses.py  nda_generation.py  new_playbook_review.py  playbook_review.py  playbook_review_srikar.py  playbook_reviewer.py  (+2 more)
tests/: conftest.py  test_backend_logic.py  test_dynamic_retrieval.py  test_embeddings.py  test_general_review.py  test_playbook_review_srikar.py  test_prompt_engineering.py
(+123 files in other folders)
